# Apollo

./: .gitignore  Dockerfile  Makefile  README.md  bookmark.py  constraint.txt  pyproject.toml  requirements.txt  run.sh
Lessons/6.S191/: Lecture_2.ipynb
archives/: constraint.txt  requirements.txt
dynamicprogramming/: bestsum.py  canconstruct.py  cansum.py  howsum.py
intertopics/: k-means.py
leetcode/: 1035. Uncrossed Lines.py  1137. N-th Tribonacci Number.py  1282_group_the_people_given_the_group_size_they_belong_to.py  137. Single Number II.py  141. Linked list Cycle.py  1456. Maximum Number of Vowels in a Substring of Given Length.py  146. LRU Cache.py  1480. Running Sum of 1d Array.py  1572. Matrix Diagonal Sum.py  1647_minimum_deletion_to_make_character_frequencies_unique.py  17. Letter Combinations of a Phone Number.py  1964. Find the Longest Valid Obstacle Course at Each Position.py  205. Isomorphic Strings.py  2140. Solving Questions with Brainpower.py  2141. Maximum Running Time of N Computers.py  217. Contains Duplicate.py  238. Product of Array Except Self.py  242. Valid Anagram.py  2466. Count Ways To Build Good Strings.py  347. Top K Frequent Elements.py  46. Permutations.py  486. Predict the Winner.py  50. Pow(x, n).py  509. Fibonacci Number.py  54. Spiral Matrix.py  59. Spiral Matrix 2.py  649. Dota2 Senate.py  724. Find Pivot Index.py  746. Min Cost Climbing Stairs.py
leetcode/easy/: 1207_unique_number_of_occurences.py  121_best_time_to_buy_and_sell_stock.py  125. Valid Palindrome.py  1496_path_crossing.py  (+30 more)
simulation/: airportsecurity.py
(+55 files in other folders)
